Fix Button place

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,14 +25,14 @@
 </div>
 <div class="wrap">
     <div class="header">
-        <h2>Timeline Service</h2>
+        <h2>Todolist</h2>
         <p>
-            공유하고 싶은 소식을 입력해주세요.
+            오늘의 메모를 적어보세요.<br>
             24시간이 지난 뒤에는 사라집니다.
         </p>
     </div>
     <div class="area-write">
-        <textarea class="field" placeholder="공유하고 싶은 소식을 입력해주세요" name="contents" id="contents" cols="30"
+        <textarea class="field" placeholder="메모를 적어주세요" name="contents" id="contents" cols="30"
                   rows="10"></textarea>
         <img src="images/send.png" alt="" onclick="writePost()">
     </div>
